contact page done

--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
 
     <!-- Site Title
     ================================================== -->
-    <title>About Tammuz &#8211; Trading &amp; Contracting W.L.L.</title>
+    <title>Blogs Tammuz &#8211; Trading &amp; Contracting W.L.L.</title>
 
     <!-- Site Favicon
     ================================================== -->
