--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                                             <div class="line"></div>
                                         </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="projects-details.html" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -653,7 +653,7 @@
                                             <div class="line"></div>
                                         </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="projects-details.html" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -671,7 +671,7 @@
                                             <div class="line"></div>
                                         </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="projects-details.html" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -689,7 +689,7 @@
                                             <div class="line"></div>
                                         </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="projects-details.html" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -707,7 +707,7 @@
                                             <div class="line"></div>
                                         </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="projects-details.html" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
