--- a/projects-2.html
+++ b/projects-2.html
@@ -257,7 +257,7 @@
                         <!-- Project Item Start -->
                         <div class="project__item grid">
                             <div class="thumbnail">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <img 
                                         src="assets/images/projects/al_bidda_park.png" 
                                         alt="AL Bidaa Park"
@@ -268,7 +268,7 @@
                                 </h4>
                             </div>
                             <div class="description">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <h2 class="title">
                                         AL Bidaa Park
                                     </h2>
@@ -290,7 +290,7 @@
                         <!-- Project Item Start -->
                         <div class="project__item grid">
                             <div class="thumbnail">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <img 
                                         src="assets/images/projects/massila_private_villa.png" 
                                         alt="Massila Private Villa"
@@ -301,7 +301,7 @@
                                 </h4>
                             </div>
                             <div class="description">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <h2 class="title">
                                         Massila Private Villa
                                     </h2>
@@ -323,7 +323,7 @@
                         <!-- Project Item Start -->
                         <div class="project__item grid">
                             <div class="thumbnail">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <img 
                                         src="assets/images/projects/al_wakra_heritage.png" 
                                         alt="Al Wakra Heritage Village Hotel"
@@ -334,7 +334,7 @@
                                 </h4>
                             </div>
                             <div class="description">
-                                <a href="project-dtls.html">
+                                <a href="projects-details.html">
                                     <h2 class="title">
                                         Al Wakra Heritage Village Hotel
                                     </h2>
