--- a/projects.html
+++ b/projects.html
@@ -255,7 +255,7 @@
                 <!-- Project Item Start -->
                 <div class="project__item list">
                     <div class="thumbnail">
-                        <a href="project-dtls.html">
+                        <a href="projects-details.html">
                             <img 
                                 src="assets/images/projects/al_bidda_park.png" 
                                 alt="AL Bidaa Park"
@@ -285,7 +285,7 @@
                 <!-- Project Item Start -->
                 <div class="project__item list">
                     <div class="thumbnail">
-                        <a href="project-dtls.html">
+                        <a href="projects-details.html">
                             <img 
                                 src="assets/images/projects/massila_private_villa.png" 
                                 alt="Massila Private Villa"
@@ -315,7 +315,7 @@
                 <!-- Project Item Start -->
                 <div class="project__item list">
                     <div class="thumbnail">
-                        <a href="project-dtls.html">
+                        <a href="projects-details.html">
                             <img 
                                 src="assets/images/projects/al_wakra_heritage.png" 
                                 alt="Al Wakra Heritage Village Hotel"
