project details done

--- a/about.html
+++ b/about.html
@@ -132,6 +132,9 @@
             </nav>
         </div>
     </header>
+    <!--~~./ end site header ~~-->
+
+    <!-- Mobile Menu Start -->
     <div class="mobile-menu">
         <div class="mobile-header">
             <a href="index.html">
@@ -218,7 +221,7 @@
             </div>
         </div>
     </div>
-    <!--~~./ end site header ~~-->
+    <!--~~./ end Mobile Menu ~~-->
     
     
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -254,7 +257,7 @@
         <div class="about__us__overview">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-md-8">
+                    <div class="col-md-10 col-xl-8">
                         <div class="section__content text-center">
                             <h3 class="title">
                                 Introducing TAMMUZ Trading & Contracting W.L.L
