--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
             </nav>
         </div>
     </header>
+    <!--~~./ end site header ~~-->
+
+    <!-- Mobile Menu Start -->
     <div class="mobile-menu">
         <div class="mobile-header">
             <a href="index.html">
@@ -218,7 +221,7 @@
             </div>
         </div>
     </div>
-    <!--~~./ end site header ~~-->
+    <!--~~./ end Mobile Menu ~~-->
     
     
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -612,7 +615,7 @@
             <div class="container">
                 <div class="section-title">
                     <div class="subtitle">
-                        WORKS
+                        PROJECTS
                     </div>
                     <h3 class="title">
                         View our best recent works
