--- a/projects.html
+++ b/projects.html
@@ -132,6 +132,9 @@
             </nav>
         </div>
     </header>
+    <!--~~./ end site header ~~-->
+
+    <!-- Mobile Menu Start -->
     <div class="mobile-menu">
         <div class="mobile-header">
             <a href="index.html">
@@ -218,7 +221,7 @@
             </div>
         </div>
     </div>
-    <!--~~./ end site header ~~-->
+    <!--~~./ end Mobile Menu ~~-->
     
     
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
