org-chart added

--- a/org-chart.html
+++ b/org-chart.html
@@ -252,6 +252,28 @@
             </div>
         </div>
         <!--~~./ end Page Banner ~~-->
+        <div class="org__chart">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 col-xl-8">
+                        <div class="section__content text-center">
+                            <h3 class="title">
+                                Introducing TAMMUZ Organization Chart
+                            </h3>
+                            <p>
+                                At Tammuz Trading & Contracting W.L.L, teams are coached for top performance and are built based on jobs awarded. After defining the scope of the project, needed talents for the vision execution are identified and tasks are delegated to people best suited for each. Additionally, each project is supported by a professional project management along the full assistance of the office staff ensuring tailored, efficient and customer-oriented execution of projects.
+                            </p>
+                        </div>
+                        <div class="section__image">
+                            <img 
+                                src="assets/images/about/org-chart.png" 
+                                alt="Organization Chart of TAMMUZ"
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!--~~./ end site Main Content ~~-->
 
