--- a/projects-details.html
+++ b/projects-details.html
@@ -350,7 +350,7 @@
                         Project gallery at a glance
                     </h3>
                 </div>
-                <div class="row g-2 g-sm-4 g-xl-5">
+                <div class="row g-4 g-lg-5">
                     <div class="col-6 col-lg-3 col-xl-4">
                         <div class="gallery_item">
                             <a href="assets/images/projects/al_bidda_park/g1__xl.png" 
