--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         Start Service Section
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-        <div class="contact__section">
+        <div class="contact__section pt-0">
             <div class="container">
                 <div class="section-title">
                     <div class="subtitle">
