--- a/management-msg.html
+++ b/management-msg.html
@@ -252,6 +252,36 @@
             </div>
         </div>
         <!--~~./ end Page Banner ~~-->
+
+        <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Management Message
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        <div class="org__chart">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 col-xl-8">
+                        <div class="section__content text-center">
+                            <h3 class="title">
+                                Management Message
+                            </h3>
+                            <p>
+                                <b>Tammuz Trading & Contracting W.L.L.</b> is a renowned service provider in Qatar. During its years of business, the company has grown from its local base to establish significant business relationships in the region. Our continuous growth is a clear evidence of our success and the trust our valued customers have instilled in us.
+                            </p>
+                            <p>
+                                <b>Tammuz</b> was established based on the pillars of professionalism, honesty, commitment to quality & safety and providing quality services. We are committed to building long-term client relationships that go beyond one-time projects. Our clients are fully aware that Tammuz has the abilities, resources and expertise to deliver their projects on time according to the highest standards.
+                            </p>
+                            <p>
+                                As the industry continues to evolve, <b>Tammuz</b> strives to meet occurring changes by constantly updating its Innovative technical expertise and pursuing organizational improvement, which gained the company the recognition for its work from both the clients and the industry alike.
+                            </p>
+                            <p>
+                                Supported by a rich experience accumulated over the years, coupled with a strong infrastructure and a dedicated, skilled labor force, we are poised to take up any challenge in the areas of construction of civil works, landscaping and trading.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--~~./ end Organization Chart ~~-->
     </main>
     <!--~~./ end site Main Content ~~-->
 
