--- a/org-chart.html
+++ b/org-chart.html
@@ -252,6 +252,10 @@
             </div>
         </div>
         <!--~~./ end Page Banner ~~-->
+
+        <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Organization Chart
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
         <div class="org__chart">
             <div class="container">
                 <div class="row justify-content-center">
@@ -261,7 +265,8 @@
                                 Introducing TAMMUZ Organization Chart
                             </h3>
                             <p>
-                                At Tammuz Trading & Contracting W.L.L, teams are coached for top performance and are built based on jobs awarded. After defining the scope of the project, needed talents for the vision execution are identified and tasks are delegated to people best suited for each. Additionally, each project is supported by a professional project management along the full assistance of the office staff ensuring tailored, efficient and customer-oriented execution of projects.
+                                At Tammuz Trading & Contracting W.L.L, teams are coached for top performance and are built based on jobs awarded. After defining the scope of the project, needed talents for the vision execution are identified and tasks are delegated to people best suited for each. Additionally, each project is supported by a professional project management along the full assistance of the office staff ensuring tailored, efficient and customer-oriented  execution of projects.
+
                             </p>
                         </div>
                         <div class="section__image">
@@ -274,6 +279,7 @@
                 </div>
             </div>
         </div>
+        <!--~~./ end Organization Chart ~~-->
     </main>
     <!--~~./ end site Main Content ~~-->
 
